tdf#141548 DOCX import: fix lost text after endnoteRef

First run of the endnote (footnote) can contain not
only the footnoteRef/endnoteRef, but endnote (footnote)
text, too. This text was lost as a regression from
commit 7dd8f8aace536a8e60e87e61ee1d90d61fba15eb
"tdf#120351 DOCX import: fix slow endnote import",
and in the case of the footnotes, from
commit 9b39ce0e66acfe812e1d50e530dc2ccdef3e1357
"tdf#76260 DOCX import: fix slow footnote import".

Change-Id: I9964ee47f456a7632a21ab3b0588d3cb70388011
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114300
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>